--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+html,
+body {
+  height: 100%;
+  background-color: var(--color-background);
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -17,10 +23,4 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
